Kubernetes/Deployment_Strategies/Canary/Main_Ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: production
spec:
  ingressClassName: nginx
  rules:
    - host: echo.prod.mydomain.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: production
                port:
                  number: 80
